--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+.jumbotron{
+    background-color: rgb(0, 15, 27);
+}
+header{
+    background-color: rgb(0, 15, 27);
+    color: #fff;
+}
+
 #bg{
     background-color: rgb(0, 15, 27);
 }
@@ -9,5 +17,5 @@
 #desc{
     color: #fff;
     margin-top: 20px;
-    text-size-adjust: .58;
+    font-size-adjust: 0.58;
 }
